<resources>
    <string name="app_name">KidsLearning</string>
    <string name="splash_text">आपल्या मुलांच्या \n उज्ज्वल भविष्यासाठी !</string>
    <string name="slide_to_start">सुरु करा </string>
    <string name="listen_read_learn">पहा वाचा आणि शिका</string>
    <string name="alphabets">मुळाक्षरे</string>
    <string name="a_b_c_d">A B C D</string>
    <string name="previous">मागे</string>
    <string name="next">पुढे</string>
    <string name="voice_over">voice_over</string>
    <string name="single_image">single_image</string>
    <string name="numbers_marathi">संख्याज्ञान</string>

    <string-array name="marathi_letters">
        <item>अ</item>
        <item>आ</item>
        <item>इ</item>
        <item>ई</item>
        <item>उ</item>
        <item>ऊ</item>
        <item>ए</item>
        <item>ॲ</item>
        <item>ऐ</item>
        <item>ओ</item>
        <item>ऑ</item>
        <item>औ</item>
        <item>अं</item>
        <item>अः</item>
        <item>क</item>
        <item>ख</item>
        <item>ग</item>
        <item>घ</item>
        <item>च</item>
        <item>छ</item>
        <item>ज</item>
        <item>झ</item>
        <item>ट</item>
        <item>ठ</item>
        <item>ड</item>
        <item>ढ</item>
        <item>ण</item>
        <item>त</item>
        <item>थ</item>
        <item>द</item>
        <item>ध</item>
        <item>न</item>
        <item>प</item>
        <item>फ</item>
        <item>ब</item>
        <item>भ</item>
        <item>म</item>
        <item>य</item>
        <item>र</item>
        <item>ल</item>
        <item>व</item>
        <item>श</item>
        <item>ष</item>
        <item>स</item>
        <item>ह</item>
        <item>ळ</item>
        <item>क्ष</item>
        <item>ज्ञ</item>
        <item>ऋ</item>
    </string-array>

    <string-array name="marathi_numbers">
        <item>१</item>
        <item>૨</item>
        <item>३</item>
        <item>४</item>
        <item>५</item>
        <item>६</item>
        <item>७</item>
        <item>८</item>
        <item>९</item>
        <item>१o</item>
    </string-array>

    <string-array name="english_alphabets">
        <item>A  a</item>
        <item>B  b</item>
        <item>C  c</item>
        <item>D  d</item>
        <item>E  e</item>
        <item>F  f</item>
        <item>G  g</item>
        <item>H  h</item>
        <item>I  i</item>
        <item>J  j</item>
        <item>K  k</item>
        <item>L  l</item>
        <item>M  m</item>
        <item>N  n</item>
        <item>O  o</item>
        <item>P  p</item>
        <item>Q  q</item>
        <item>R  r</item>
        <item>S  s</item>
        <item>T  t</item>
        <item>U  u</item>
        <item>V  v</item>
        <item>W  w</item>
        <item>X  x</item>
        <item>Y  y</item>
        <item>Z  z</item>
    </string-array>


    <string-array name="english_phonetic">
        <item>अ‍ॅ</item>
        <item>ब</item>
        <item>क / स</item>
        <item>ड / द</item>
        <item>ए</item>
        <item>फ</item>
        <item>ग</item>
        <item>ह</item>
        <item>इ</item>
        <item>ज</item>
        <item>क</item>
        <item>ल / ळ</item>
        <item>म</item>
        <item>न</item>
        <item>ओ</item>
        <item>प</item>
        <item>क्व</item>
        <item>र</item>
        <item>स</item>
        <item>त / ट</item>
        <item>उ / अ</item>
        <item>व</item>
        <item>व</item>
        <item>क्स</item>
        <item>य</item>
        <item>झ</item>
    </string-array>

</resources>